Error reporting updated
Created a better system for error reporting. Now you get a zip file you
can send to me should problems arise. If there is no error, you can
force creating the report in About->Send error report.

You'll sstill have to send me the actual file yourself.

--- a/7DaysProfileEditor/7DaysProfileEditor.csproj
+++ b/7DaysProfileEditor/7DaysProfileEditor.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -90,6 +91,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Data\AssetInfo.cs" />
+    <Compile Include="ErrorHandler.cs" />
     <Compile Include="Data\IconData.cs" />
     <Compile Include="Data\UIIconData.cs" />
     <Compile Include="Data\XmlData.cs" />
