Significantly sped up file opening
Also fixed several minor bugs.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ obj/
 *.manifest
 *.pdb
 *.vshost.exe
+*.log
+7DaysProfileEditor/bin/x64/Debug/7DaysProfileEditor.config
+7DaysProfileEditor/bin/x64/Release/7DaysProfileEditor.config
+*.config
