--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/7DaysSaveManipulator"]
 	path = submodules/7DaysSaveManipulator
-	url = git://github.com/Karlovsky120/7DaysSaveManipulator.git
+	url = https://github.com/Karlovsky120/7DaysSaveManipulator.git
