--- a/7DaysProfileEditor/7DaysProfileEditor.csproj
+++ b/7DaysProfileEditor/7DaysProfileEditor.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SevenDaysProfileEditor</RootNamespace>
     <AssemblyName>7DaysProfileEditor</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
@@ -30,6 +30,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -71,107 +72,38 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source\Config.cs" />
-    <Compile Include="source\Data\AssetInfo.cs" />
-    <Compile Include="source\Data\IconData.cs" />
-    <Compile Include="source\Data\UIIconData.cs" />
     <Compile Include="source\Data\XmlData.cs" />
-    <Compile Include="source\Data\XmlNullReferenceException.cs" />
     <Compile Include="source\ErrorHandler.cs" />
-    <Compile Include="source\GUI\AboutWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="source\GUI\AboutWindow.cs" />
+    <Compile Include="source\GUI\CentralController.cs" />
     <Compile Include="source\GUI\BottomStatusBar.cs">
-      <SubType>Component</SubType>
+      <SubType>Code</SubType>
     </Compile>
-    <Compile Include="source\GUI\InvertedIntegerTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\GUI\LabeledControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\GUI\LabeledCoordinate.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\GUI\MainMenuActions.cs" />
+    <Compile Include="source\GUI\InvertedIntegerTextBox.cs" />
+    <Compile Include="source\GUI\LabeledControl.cs" />
+    <Compile Include="source\GUI\LabeledCoordinate.cs" />
     <Compile Include="source\GUI\MainMenuStrip.cs">
-      <SubType>Component</SubType>
+      <SubType>Code</SubType>
     </Compile>
-    <Compile Include="source\GUI\MainWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="source\GUI\NumericTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\GUI\PercentageIntegerTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="source\GUI\MainWindow.cs" />
+    <Compile Include="source\GUI\NumericTextBox.cs" />
+    <Compile Include="source\GUI\PercentageIntegerTextBox.cs" />
     <Compile Include="source\GUI\PlayerTab.cs">
-      <SubType>Component</SubType>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="source\GUI\PlayerTabControl.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\GUI\ScrollPanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Inventory\InventorySlotAttachment.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Inventory\InventorySlotBase.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Inventory\InventorySlotItem.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Inventory\InventorySlotPart.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Inventory\InventoryTab.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Inventory\ItemBinder.cs" />
-    <Compile Include="source\Inventory\ItemData.cs" />
-    <Compile Include="source\Inventory\ViewPanel.cs">
-      <SubType>Component</SubType>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="source\Log.cs" />
     <Compile Include="source\Program.cs" />
-    <Compile Include="source\Skills\Requirement.cs" />
-    <Compile Include="source\Skills\SkillBinder.cs" />
-    <Compile Include="source\Skills\SkillData.cs" />
-    <Compile Include="source\Skills\SkillSlot.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Skills\SkillsTab.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\Skills\SkillType.cs" />
-    <Compile Include="source\StatsAndGeneral\LabeledSchematicRecipe.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\StatsAndGeneral\LiveStatSlot.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\StatsAndGeneral\RecipeBinder.cs" />
-    <Compile Include="source\StatsAndGeneral\RecipeData.cs" />
-    <Compile Include="source\StatsAndGeneral\SchematicsRecipesPanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\StatsAndGeneral\ScorePanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\StatsAndGeneral\StatsAndGeneralTab.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\StatsAndGeneral\StatSlot.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="source\StatsAndGeneral\StatsPanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="source\StatsAndGeneral\ScorePanel.cs" />
+    <Compile Include="source\StatsAndGeneral\StatsAndGeneralTab.cs" />
+    <Compile Include="source\StatsAndGeneral\StatSlot.cs" />
+    <Compile Include="source\StatsAndGeneral\StatsPanel.cs" />
     <Compile Include="source\Util.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="ILMerge.props" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -191,10 +123,17 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\7DaysSaveManipulator\7DaysSaveManipulator.csproj">
       <Project>{5358c4ca-e436-44a3-a6eb-36d2732f439f}</Project>
       <Name>7DaysSaveManipulator</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="source\Inventory\" />
+    <Folder Include="source\Skills\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
